--- a/APPVIEW/Views/ProductDetail/Create.cshtml
+++ b/APPVIEW/Views/ProductDetail/Create.cshtml
@@ -20,10 +20,8 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
          
             <div class="form-group">
-                <label asp-for="Id_Category" class="control-label"></label>
-                <input asp-for="Id_Category" class="form-control" />
-               @* <select asp-for="Id_Category" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
-
+                <label asp-for="Id_Category" class="control-label"></label>               
+                <select asp-for="Id_Category" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
                     @{
                         if (ViewBag.Category != null)
                         {
@@ -33,13 +31,23 @@
                             }
                         }
                     }
-                </select>*@
+                </select>
              
                 <span asp-validation-for="Id_Category" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Id_Size" class="control-label"></label>
-                <input asp-for="Id_Size" class="form-control" />
+                <select asp-for="Id_Size" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                    @{
+                        if (ViewBag.Size != null)
+                        {
+                            foreach (var item in ViewBag.Size)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_Size" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -60,7 +68,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="Id_Material" class="control-label"></label>
-                <input asp-for="Id_Material" class="form-control" />
+                <select asp-for="Id_Material" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
+
+                    @{
+                        if (ViewBag.Material != null)
+                        {
+                            foreach (var item in ViewBag.Material)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_Material" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -84,7 +103,18 @@
             <input type="hidden"  name="myList" id="myList">
             <div class="form-group">
                 <label asp-for="Id_supplier" class="control-label"></label>
-                <input asp-for="Id_supplier" class="form-control" />
+                <select asp-for="Id_supplier" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
+
+                    @{
+                        if (ViewBag.Supplier != null)
+                        {
+                            foreach (var item in ViewBag.Supplier)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_supplier" class="text-danger"></span>
             </div>
             <div class="form-group">
