--- a/APPVIEW/Views/ProductDetail/Edit.cshtml
+++ b/APPVIEW/Views/ProductDetail/Edit.cshtml
@@ -13,15 +13,34 @@
     <div class="col-md-4">
         <form asp-action="Edit" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-        
             <div class="form-group">
                 <label asp-for="Id_Category" class="control-label"></label>
-                <input asp-for="Id_Category" class="form-control" />
+                <select asp-for="Id_Category" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                    @{
+                        if (ViewBag.Category != null)
+                        {
+                            foreach (var item in ViewBag.Category)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_Category" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Id_Size" class="control-label"></label>
-                <input asp-for="Id_Size" class="form-control" />
+                <select asp-for="Id_Size" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                    @{
+                        if (ViewBag.Size != null)
+                        {
+                            foreach (var item in ViewBag.Size)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_Size" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -42,17 +61,49 @@
             </div>
             <div class="form-group">
                 <label asp-for="Id_Material" class="control-label"></label>
-                <input asp-for="Id_Material" class="form-control" />
+                <select asp-for="Id_Material" id="color" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
+                    @{
+                        if (ViewBag.Material != null)
+                        {
+                            foreach (var item in ViewBag.Material)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_Material" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Id_Color" class="control-label"></label>
-                <input asp-for="Id_Color" class="form-control" />
+                <select asp-for="Id_Color" id="color" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
+                    @{
+                        if (ViewBag.Color != null)
+                        {
+                            foreach (var item in ViewBag.Color)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_Color" class="text-danger"></span>
+                <a class="btn btn-outline-primary" href="~/Color/create">Thêm màu</a>
             </div>
+            <input type="hidden" name="myList" id="myList">
             <div class="form-group">
                 <label asp-for="Id_supplier" class="control-label"></label>
-                <input asp-for="Id_supplier" class="form-control" />
+                <select asp-for="Id_supplier" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
+                    @{
+                        if (ViewBag.Supplier != null)
+                        {
+                            foreach (var item in ViewBag.Supplier)
+                            {
+                                <option value="@item.Id.ToString()"> @item.Name</option>
+                            }
+                        }
+                    }
+                </select>
                 <span asp-validation-for="Id_supplier" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -75,37 +126,15 @@
                 <input asp-for="Status" class="form-control" />
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Create_date" class="control-label"></label>
-                <input asp-for="Create_date" class="form-control" />
-                <span asp-validation-for="Create_date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Update_date" class="control-label"></label>
-                <input asp-for="Update_date" class="form-control" />
-                <span asp-validation-for="Update_date" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Create_by" class="control-label"></label>
-                <input asp-for="Create_by" class="form-control" />
-                <span asp-validation-for="Create_by" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Update_by" class="control-label"></label>
-                <input asp-for="Update_by" class="form-control" />
-                <span asp-validation-for="Update_by" class="text-danger"></span>
-            </div>
+         
+      
             <div class="form-group">
                 <div class="mb-3">
                     <label for="formFileMultiple" class="form-label">Chọn ảnh từ Máy tính</label>
                     <input class="form-control" type="file" id="formFileMultiple" name="imageFile" multiple>
+                </div>
             </div>
-                <div class="form-group">
+            <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
