--- a/APPVIEW/Views/ProductDetail/GetList.cshtml
+++ b/APPVIEW/Views/ProductDetail/GetList.cshtml
@@ -20,9 +20,7 @@
             <th scope="col">
                 Size
             </th>
-            <th scope="col">
-                Product
-            </th>
+           
             <th scope="col">
                Material
             </th>
@@ -70,16 +68,38 @@
         <tr>
            
             <td>
-                    @Html.DisplayFor(modelItem => item.Id_Category)
+                    @foreach (var obj in ViewBag.Category)
+                    {
+                        if (item.Id_Category == obj.Id)
+                        {
+                            <p>
+                                @obj.Name
+                            </p>
+                        }
+                    }
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Id_Size)
+                    @foreach (var obj in ViewBag.Size)
+                    {
+                        if (item.Id_Size == obj.Id)
+                        {
+                            <p>
+                                @obj.Name
+                            </p>
+                        }
+                    }
             </td>
+           
             <td>
-                @Html.DisplayFor(modelItem => item.Id_Product)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Id_Material)
+                    @foreach (var obj in ViewBag.Material)
+                    {
+                        if (item.Id_Material == obj.Id)
+                        {
+                            <p>
+                                @obj.Name
+                            </p>
+                        }
+                    }
             </td>
             <td>
                     @foreach (var obj in ViewBag.Color)
@@ -93,7 +113,15 @@
                     }
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Id_supplier)
+                    @foreach (var obj in ViewBag.Supplier)
+                    {
+                        if (item.Id_supplier == obj.Id)
+                        {
+                                        <p>
+                                @obj.Name
+                                        </p>
+                        }
+                    }
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
