--- a/APPVIEW/Views/Material/Create.cshtml
+++ b/APPVIEW/Views/Material/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model APPDATA.Models.Category
+﻿@model APPDATA.Models.Material
 
 @{
     ViewData["Title"] = "Create";
@@ -7,13 +7,13 @@
 
 <h1>Create</h1>
 
-<h4>Category</h4>
+<h4>Material</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-          
+        
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
@@ -24,7 +24,16 @@
                 <input asp-for="Status" class="form-control" />
                 <span asp-validation-for="Status" class="text-danger"></span>
             </div>
-         
+            <div class="form-group">
+                <label asp-for="Create_date" class="control-label"></label>
+                <input asp-for="Create_date" class="form-control" />
+                <span asp-validation-for="Create_date" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Update_date" class="control-label"></label>
+                <input asp-for="Update_date" class="form-control" />
+                <span asp-validation-for="Update_date" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -35,5 +44,4 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
-
 
