--- a/APPVIEW/Views/Material/GetList.cshtml
+++ b/APPVIEW/Views/Material/GetList.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<APPDATA.Models.Size>
+﻿@model IEnumerable<APPDATA.Models.Material>
 
 @{
     ViewData["Title"] = "GetList";
@@ -13,7 +13,9 @@
 <table class="table">
     <thead>
         <tr>
-           
+            <th>
+                @Html.DisplayNameFor(model => model.Id)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -32,7 +34,9 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
-          
+            <td>
+                @Html.DisplayFor(modelItem => item.Id)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
@@ -48,7 +52,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
                     @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                    @Html.ActionLink("Delete", "Delete", new { id=item.Id})
+                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
             </td>
         </tr>
 }
