--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -16,13 +16,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-	
-	<link href="~/contentweb/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
+
+    <link href="~/contentweb/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-	
-	<link href="~/contentweb/css/style.css" rel="stylesheet" />
-	
+
+    <link href="~/contentweb/css/style.css" rel="stylesheet" />
+
 </head>
 <body>
 
@@ -142,8 +142,11 @@
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                         <div class="navbar-nav ml-auto py-0">
-                            <a href="" class="nav-item nav-link">Login</a>
-                            <a href="" class="nav-item nav-link">Register</a>
+
+                            <a href="~/Account/Login" class="btn btn-primary" style="border-radius: 10px">
+                                <img src="~/contentweb/img/user_1144760.png" alt="Login"> Login
+                            </a>
+
                         </div>
                     </div>
                 </nav>
@@ -240,14 +243,14 @@
 
     <!-- Template Javascript -->
     <script src="~/contentweb/js/main.js"></script>
-   
 
 
-    
-   
 
-  
 
-   
+
+
+
+
+
 </body>
 </html>
