--- a/APPVIEW/Views/ProductDetail/Create.cshtml
+++ b/APPVIEW/Views/ProductDetail/Create.cshtml
@@ -68,7 +68,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Id_Material" class="control-label"></label>
-                <select asp-for="Id_Material" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
+                <select asp-for="Id_Material" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
 
                     @{
                         if (ViewBag.Material != null)
@@ -84,7 +84,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Id_Color" class="control-label"></label>
-                <select asp-for="Id_Color" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
+                <select asp-for="Id_Color" id="color" class="selectpicker form-control"  aria-label="size 3 select example" onchange="addToList()">
                     
                     @{
                         if (ViewBag.Color != null)
@@ -103,7 +103,7 @@
             <input type="hidden"  name="myList" id="myList">
             <div class="form-group">
                 <label asp-for="Id_supplier" class="control-label"></label>
-                <select asp-for="Id_supplier" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
+                <select asp-for="Id_supplier" id="color" class="selectpicker form-control" aria-label="size 3 select example" onchange="addToList()">
 
                     @{
                         if (ViewBag.Supplier != null)
@@ -154,6 +154,18 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+<@*select asp-for="Id_supplier" id="color" class="selectpicker form-control" multiple aria-label="size 3 select example" onchange="addToList()">
+
+    @{
+        if (ViewBag.Supplier != null)
+        {
+            foreach (var item in ViewBag.Supplier)
+            {
+                <option value="@item.Id.ToString()"> @item.Name</option>
+            }
+        }
+    }
+</select>*@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.14.0-beta2/js/bootstrap-select.min.js" integrity="sha512-FHZVRMUW9FsXobt+ONiix6Z0tIkxvQfxtCSirkKc5Sb4TKHmqq1dZa8DphF0XqKb3ldLu/wgMa8mT6uXiLlRlw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
