--- a/APPVIEW/Views/ProductDetail/GetList.cshtml
+++ b/APPVIEW/Views/ProductDetail/GetList.cshtml
@@ -157,6 +157,7 @@
                         if (item.Id == obj.IdProductdetail)
                         {
                             <img src="~/images/@obj.Name" alt="Fjords" width="50px" height="50px">
+                            break;
                         }
                     }
             </td>
