--- a/APPVIEW/Views/Cart/ViewCart.cshtml
+++ b/APPVIEW/Views/Cart/ViewCart.cshtml
@@ -156,7 +156,7 @@
                             <td>
                                 <div class="checkout_btn_inner d-flex align-items-center">
                                     <a class="gray_btn" href="~/home/index">Continue Shopping</a>
-                                    <a class="primary-btn ml-2" href="#">Proceed to checkout</a>
+                                    <a class="primary-btn ml-2" href="~/home/checkout">Proceed to checkout</a>
                                 </div>
                             </td>
                         </tr>
