--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -145,6 +145,17 @@
                         </a>
 
                         <ul class="menu-sub">
+                      
+                            <li class="menu-item">
+                                <a href="~/QLBills/ShowBill" class="menu-link">
+                                    <div data-i18n="Without menu">Hóa Đơn Chờ Xác Nhận</div>
+                                </a>
+                            </li>
+                            <li class="menu-item">
+                                <a href="~/QLBills/ShowBillXacNhan" class="menu-link">
+                                    <div data-i18n="Without menu">Hóa Đơn đã Xác Nhận</div>
+                                </a>
+                            </li>
                             <li class="menu-item">
                                 <a  href="~/Role/getlist"  class="menu-link" >
                                     <div data-i18n="Without menu">Role</div>
