--- a/APPVIEW/Views/Shared/_LayoutWeb.cshtml
+++ b/APPVIEW/Views/Shared/_LayoutWeb.cshtml
@@ -72,9 +72,13 @@
                             </li>
 
                             <li class="nav-item"><a href="~/Cart/ViewCart"><i class="ti-shopping-cart"></i>@*<span class="nav-shop__circle">3</span>*@</a> </li>
-                            <li class="nav-item"><a class="button button-header" href="#">Buy Now</a></li>
+                            <li class="nav-item"><a class="button button-header" href="#">Buy Now</a></li> 
+                       
+
+
+                            <li class="nav-item"><a a class="button button-header" asp-action="Thongtin" asp-controller="Home">Thông tin đơn hàng</a></li>
                         </ul>
-                        <li class="nav-item active"><a class="nav-link" asp-action="Thongtin" asp-controller="Home">Thông tin đơn hàng</a></li>
+                      
                     </div>
                 </div>
             </nav>
