--- a/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/APPVIEW/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -175,41 +175,65 @@
                                 </a>
                             </li>
                             <li class="menu-item">
-                                <a href="~/Address/getlist" class="menu-link">
-                                    <div data-i18n="Without navbar">Address</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
                                 <a href="~/Bill/getlist" class="menu-link">
                                     <div data-i18n="Container">Bill</div>
                                 </a>
                             </li>
-                            <li class="menu-item">
-                                <a href="~/Color/Getlist" class="menu-link">
-                                    <div data-i18n="Fluid">Color</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="~/Image/Getlist" class="menu-link">
-                                    <div data-i18n="Blank">Image</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="~/Material/Getlist" class="menu-link">
-                                    <div data-i18n="Blank">Material</div>
-                                </a>
-                            </li>
-                            <li class="menu-item">
-                                <a href="~/Size/Getlist" class="menu-link">
-                                    <div data-i18n="Blank">Size</div>
-                                </a>
-                            </li>
+
                         </ul>
                     </li>
                     <li class="menu-item">
                         <a href="~/Account/getlist" class="menu-link">
                             <i class="mdi mdi-account-box"></i>
                             <div data-i18n="Layouts"> Accounts </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Size/getlist" class="menu-link">
+                            <i class="mdi mdi-size-xxxl"></i>
+                            <div data-i18n="Layouts"> Sizes </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Material/getlist" class="menu-link">
+                            <i class="mdi mdi-material-ui"></i>
+                            <div data-i18n="Layouts"> Materials </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Image/getlist" class="menu-link">
+                            <i class="mdi mdi-image"></i>
+                            <div data-i18n="Layouts"> Images </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Color/getlist" class="menu-link">
+                            <i class="mdi mdi-invert-colors"></i>
+                            <div data-i18n="Layouts"> Colors </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Address/getlist" class="menu-link">
+                            <i class="mdi mdi-map-marker"></i>
+                            <div data-i18n="Layouts"> Address </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Role/getlist" class="menu-link">
+                            <i class="mdi mdi-map-marker"></i>
+                            <div data-i18n="Layouts"> Roles </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Category/getlist" class="menu-link">
+                            <i class="mdi mdi-shape"></i>
+                            <div data-i18n="Layouts"> Categorys </div>
+                        </a>
+                    </li>                    
+                    <li class="menu-item">
+                        <a href="~/Supplier/getlist" class="menu-link">
+                            <i class="mdi mdi-shape"></i>
+                            <div data-i18n="Layouts"> Suppliers </div>
                         </a>
                     </li>
 
@@ -277,9 +301,9 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" href="#">
-                                            <i class="mdi mdi-cog-outline me-1 mdi-20px"></i>
-                                            <span class="align-middle">Settings</span>
+                                        <a class="dropdown-item" href="~/home/index">
+                                            <i class="mdi mdi-application-outline"></i>
+                                            <span class="align-middle">Go to web</span>
                                         </a>
                                     </li>
                                     <li>
