--- a/APPVIEW/Views/Account/GetList.cshtml
+++ b/APPVIEW/Views/Account/GetList.cshtml
@@ -2,7 +2,7 @@
 @model IEnumerable<APPDATA.Models.Account>
 
 @{
-    ViewData["Title"] = "Admin-Account";
+    ViewData["Title"] = "Account-List";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
     int stt = 0;
 
