--- a/APPVIEW/Views/Material/Edit.cshtml
+++ b/APPVIEW/Views/Material/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model APPDATA.Models.Size
+﻿@model APPDATA.Models.Material
 
 @{
     ViewData["Title"] = "Edit";
@@ -7,7 +7,7 @@
 
 <h1>Edit</h1>
 
-<h4>Size</h4>
+<h4>Material</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
