--- a/APPVIEW/Views/Role/Create.cshtml
+++ b/APPVIEW/Views/Role/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APPDATA.Models.Role
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Role-Create";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
