--- a/APPVIEW/Views/Role/Edit.cshtml
+++ b/APPVIEW/Views/Role/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model APPDATA.Models.Role
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Role-Edit";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
