--- a/APPVIEW/Views/Role/GetList.cshtml
+++ b/APPVIEW/Views/Role/GetList.cshtml
@@ -1,48 +1,65 @@
 ﻿@model IEnumerable<APPDATA.Models.Role>
 
 @{
-    ViewData["Title"] = "GetList";
+    ViewData["Title"] = "Roles-List";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
+    int stt = 0;
 }
 
-<h1>GetList</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.id)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Status)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.id)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Status)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ }) |
-                @Html.ActionLink("Delete", "Delete", new { /* id=item.PrimaryKey */ })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+<div class="card">
+    <div class="card-header">
+        <h5 class="mb-0">Roles</h5>
+    </div>
+    <div class="card-body">
+        <a class="btn btn-success waves-effect waves-light"   asp-action="Create">
+            <span class="mdi mdi-plus-thick">Create new</span>
+        </a>
+
+        <div class="table-responsive">
+            <table class="table table-hover">
+                <thead>
+                    <tr>
+                        <th>STT</th>
+                        <th>Name role</th>
+                        <th>Status</th>
+                        <th>Actions</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model != null && Model.Any())
+                    {
+                        @foreach (var item in Model)
+                        {
+                            <tr>
+                                <td>@(stt += 1)</td>
+                                <td>@Html.DisplayFor(modelItem => item.name)</td>
+                                <td>
+                                    <span class="badge @(item.Status == 1 ? "badge rounded-pill bg-label-success" : "badge rounded-pill bg-label-danger")">
+                                        @(item.Status == 1 ? "Used" : "Not use")
+                                    </span>
+                                </td>
+
+                                <td>
+                                    <a href="@Url.Action("Edit", new { id = item.id  })" class="btn btn-info waves-effect waves-light">
+                                        <span class="mdi mdi-pencil-box-outline"></span>Edit
+                                    </a>
+                                    <a href="@Url.Action("Delete", new { id = item.id  })" class="btn btn-danger waves-effect waves-light">
+                                        <span class="mdi mdi-delete"></span>Delete
+                                    </a>
+                                </td>
+
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="8" class="text-center">No Data.</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
